--- a/index.html
+++ b/index.html
@@ -1,7 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>torinsindex</title>
+
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+    <h1>Torin Coffee</h1>
+
+    <h2> About<h2>
+        <img src="">
+        <p>Hello! My name is Torin Coffee. The first question I usually get asked is “like the drink?”. Yes, like the drink. A perfect pair for my home in the Pacific Northwest. I enjoy cooking, I figure everyones got to eat, might as well eat good. I enjoy exercising, currently planning on running a half marathon in the spring of 2023. I love watching movies, check out my letter box, if you know you know. Favorite movies are Chef, Ratatouille, Count of Monte Cristo, and The Empire Strikes Back. My favorite musical artists are Hippocampus, Boy Pablo, Anderson Paak, Terrance Martin, Cage the Elephant, and Peter Cat Recording Co. Some of my role models are Jon Faverou, Casey Neistat, Tinker Hatfield, and Paul Rudd.  </p>
+
+
+</Footer>
+    <p><b>© copyright ABY</b><br> 
+        <a href="mailto:torincoffeejava@gmail.com.sw">torincoffeejava@gmail.com</a><br>
+            
+        A <a href="https://.com/" target="_blank">WWU Design 360</a> example - for educational purposes only.</p>
+
+    <li><a href="index.html">Exercise 1</a></li>
+    <li><a href="torin2.html">Exercise 2</a></li>
+    <li><a href="torin3.html">Exercise 3</a></li>
+    <li><a href="torin4.html">Exercise 4</a></li>
+    <li><a href="torin6.html">Exercise 6</a></li>
+
+
+
