--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 
 </article>
     <h1>Torin Coffee</h1>
-    <h2></h2>
+    <h2>Winter Quarter</h2>
+    <h3>DSGN 360</h3>
         <img src="images/pizza_photo.jpg" alt="Pizza Photo" width="640" height="428">
-        <p>Hello! My name is Torin Coffee. The first question I usually get asked is “like the drink?”. Yes, like the drink. A perfect pairing for my home in the Pacific Northwest. I enjoy cooking, I figure everyones got to eat, might as well eat good. I enjoy exercising, currently planning on running a half marathon in the spring of 2023. I love watching movies, check out my letter box, if you know you know. Favorite movies are Chef, Ratatouille, Count of Monte Cristo, and The Empire Strikes Back. My favorite musical artists are Hippocampus, Boy Pablo, Anderson Paak, Terrance Martin, Cage the Elephant, and Peter Cat Recording Co. Some of my role models are Jon Faverou, Casey Neistat, Tinker Hatfield, and Paul Rudd.  </p>
+       <h4> <p>Hello! My name is Torin Coffee. The first question I usually get asked is “like the drink?”. Yes, like the drink. A perfect pairing for my home in the Pacific Northwest. I enjoy cooking, I figure everyones got to eat, might as well eat good. I enjoy exercising, currently planning on running a half marathon in the spring of 2023. I love watching movies, check out my letter box, if you know you know. Favorite movies are Chef, Ratatouille, Count of Monte Cristo, and The Empire Strikes Back. My favorite musical artists are Hippocampus, Boy Pablo, Anderson Paak, Terrance Martin, Cage the Elephant, and Peter Cat Recording Co. Some of my role models are Jon Faverou, Casey Neistat, Tinker Hatfield, and Paul Rudd.  </p></h4>
+        
     </article> 
 
 <footer>
