--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>torinsindex</title>
+     <link href="stylesheet.css" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;600;700;900&display=swap" rel="stylesheet">
 
 </head>
 
@@ -22,7 +26,7 @@
 <footer>
     <hr>
     <p><b>&copy; copyright 9 ABY</b><br> 
-    <a href="mailto:torincoffeejava@gmail.com.sw">torincoffeejava@gmail.com.sw</a><br>
+    <a href="mailto:torincoffeejava@gmail.com.">torincoffeejava@gmail.com.sw</a><br>
         
     A <a href="https://.com/" target="_blank">WWU Design 360</a> example - for educational purposes only.</p>
 
