--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
         
     </article> 
 
+<nav>
+    <ul>
+        </li><a href="https://www.figma.com/file/h7KlrqLYiQADSvjiDtPYCF/Recreation-Northwest?node-id=0%3A1&t=vlgrOWCyY6Y4VfwW-1">Project 1</a></li>
+        </li><a href="230206_Recreation_NW_Case_Study.pdf">Project 1 Process</a></li>
+
+   
+    </ul>  
+</nav>
+
 <footer>
     <hr>
     <p><b>&copy; copyright 9 ABY</b><br> 
