--- a/index.html
+++ b/index.html
@@ -25,10 +25,8 @@
 
 <nav>
     <ul>
-        </li><a href="https://www.figma.com/file/h7KlrqLYiQADSvjiDtPYCF/Recreation-Northwest?node-id=0%3A1&t=vlgrOWCyY6Y4VfwW-1">Project 1</a></li>
+        </li><a href="https://www.figma.com/proto/h7KlrqLYiQADSvjiDtPYCF/Recreation-Northwest?node-id=13%3A40&scaling=scale-down&page-id=0%3A1&starting-point-node-id=13%3A40">Project 1</a></li>
         </li><a href="230206_Recreation_NW_Case_Study.pdf">Project 1 Process</a></li>
-
-   
     </ul>  
 </nav>
 
