--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <link href="skeleton.css" type="text/css" rel="stylesheet"> 
 
-    <link href="" rel="stylesheet" type="text/css">
+    <link href="stylesheet02.css" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -23,7 +23,7 @@
 
      <header class="row">
 
-        <div class="twelve columns"
+        <div class="twelve columns"></div>
 
             <nav>
                 <ul>
@@ -66,7 +66,7 @@
 
 
 
-    <div class=row>
+    <div class="row">
             
             <div class="twelve columns">
                 
@@ -141,3 +141,22 @@
 
 </body>
 </html>
+
+
+<div class="row">
+    <div class="three columns">
+        <p>Starwars: The Empire Strikes Back</p>
+    </div>
+
+    <div class="three columns"></div>
+        <p>Cinema Paradiso</p>
+    </div>
+
+    <div class="three columns">
+        <p>Isle of Dogs</p>
+    </div>
+
+    <div class="three columns">
+        <p>Chef</p>
+    </div>        
+</div>
