--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     
             <button class="button-primary" href="230206_Recreation_NW_Case_Study.pdf">Case Study </button>
 
-            <button class="button-primary" href="#">project 2 </button>
+            <button class="button-primary" href="https://www.figma.com/file/OgUa037TLmNYXpgrfylOjG/Journey_ITW_Website02?t=cJ9cJVpJAS3X48Fq-1">project 2 demo </button>
 
             <button class="button-primary" href="#">Exercise 4 </button>
         
