--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
         A <a href="https://.com/" target="_blank">WWU Design 360</a> example - for educational purposes only.</p>
     <div class="buttons">
        
-            <button class="button-primary" href="https://www.figma.com/proto/h7KlrqLYiQADSvjiDtPYCF/Recreation-Northwest?node-id=13%3A40&scaling=scale-down&page-id=0%3A1&starting-point-node-id=13%3A40">Project 1 Demo </button>
+            <a href="https://www.figma.com/proto/h7KlrqLYiQADSvjiDtPYCF/Recreation-Northwest?node-id=13%3A40&scaling=scale-down&page-id=0%3A1&starting-point-node-id=13%3A40"><button class="button-primary">Project 1 Demo </button></a>
     
-            <button class="button-primary" href="230206_Recreation_NW_Case_Study.pdf">Case Study </button>
+            <a href="230206_Recreation_NW_Case_Study.pdf"><button class="button-primary">Case Study </button></a>
 
             <a href="https://www.figma.com/file/OgUa037TLmNYXpgrfylOjG/Journey_ITW_Website02?t=cJ9cJVpJAS3X48Fq-1"><button class="button-primary" >project 2 demo </button></a>
 
