--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <li><a href="https://www.figma.com/proto/h7KlrqLYiQADSvjiDtPYCF/Recreation-Northwest?node-id=13%3A40&scaling=scale-down&page-id=0%3A1&starting-point-node-id=13%3A40">Project 1 Figma</a></li>
             <li><a href="230206_Recreation_NW_Case_Study.pdf">Project 2 Case Study</a></li>
             <li><a href="https://www.figma.com/file/OgUa037TLmNYXpgrfylOjG/Journey_ITW_Website02?node-id=0%3A1&t=sc49pzq4ehwTM4wI-1">Project 2 Figma</a></li>
-            <li><a href="version02_journeyIntoTheWoods/">Exercise 4</a></li>
+            <li><a href="version02_journeyIntoTheWoods/">project 2 website</a></li>
             <li><a href="#">Exercise 5</a></li>
             <li><a href="#">Exercise 6</a></li>
         </ul>
