--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <li><a href="230206_Recreation_NW_Case_Study.pdf">Project 2 Case Study</a></li>
             <li><a href="https://www.figma.com/file/OgUa037TLmNYXpgrfylOjG/Journey_ITW_Website02?node-id=0%3A1&t=sc49pzq4ehwTM4wI-1">Project 2 Figma</a></li>
             <li><a href="version02_journeyIntoTheWoods/index.html">project 2 website</a></li>
-            <li><a href="#">Exercise 5</a></li>
+            <li><a href="/230206_Recreation_NW_Case_Study.pdf">project 2 case study</a></li>
             <li><a href="#">Exercise 6</a></li>
         </ul>
 =======
